--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,7 @@
 [pytest]
-addopts = --driver=Firefox
+
+# firefox driver
+addopts = --driver=Firefox --driver-path driver/geckodriver.exe
+
+# chrome driver
+# addopts = --driver=Chrome --driver-path driver/chromedriver.exe
