--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 
 # firefox driver
-addopts = --driver=Firefox --driver-path driver/geckodriver.exe
+# addopts = --driver=Firefox --driver-path driver/geckodriver.exe
 
 # chrome driver
-# addopts = --driver=Chrome --driver-path driver/chromedriver.exe
+addopts = --driver=Chrome --driver-path driver/chromedriver.exe
